# 3dgs-renderer-benchmark

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  adding-a-renderer.md  architecture.md  benchmark.py  benchmark_suite.md  docker-compose.yml  index.html  leaderboard.md  local_validation_2026-07-13.md  methodology.md  migration.md  optimization_analysis.md  protocol.md  pyproject.toml  renderer-integration.md  renderer_discovery.md  renderer_survey.md  reproducibility.md  requirements-benchmark.txt  requirements-quality.txt  requirements-test.txt  research_extensions.md  summary_report.md  update_docs.py
.github/: PULL_REQUEST_TEMPLATE.md
baselines/: README.md  regression_thresholds.json
benchmark/: README.md  protocol.json  renderers.json  suite.json  training.json
benchmark_suite/: suite.json
community/: submission_template.json
datasets/: README.md
docker/: gsplat.Dockerfile  higs.Dockerfile  tcgs.Dockerfile
docs/: architecture.md  benchmark_suite.md  benchmark_taxonomy.md  comparison-analysis.md  datasets.md  evaluation_methodology.md  hardware.md  index.html  local_validation_2026-07-13.md  methodology.md  migration.md  official_dataset_training.md  optimization_analysis.md  protocol.md  ranking.md  renderer-integration.md  renderer_discovery.md  renderer_survey.md  repository-architecture.md  research-roadmap-2026.md  summary_report.md  synthetic_stress_suite.md
leaderboard/: leaderboard.html  leaderboard.json  leaderboard.md  quality_speed.html  ranking.csv  ranking.json
outputs/: benchmark_report.html  (+3 more)
(+469 files in other folders)
