[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "3dgs-renderer-benchmark"
version = "0.2.0"
requires-python = ">=3.10"

[project.scripts]
benchmark = "benchmark_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["benchmark_cli", "benchmark_matrix"]
